[gd_scene load_steps=11 format=3 uid="uid://dimrvv16o162a"]

[ext_resource type="Script" path="res://Entities/Bullet.gd" id="1_dqpg5"]
[ext_resource type="Texture2D" uid="uid://b8xkj57ujly4m" path="res://Assets/Sprites/white_circle.png" id="2_gturb"]
[ext_resource type="Script" path="res://Entities/Player/SnakeComponent.gd" id="3_lep1b"]
[ext_resource type="Script" path="res://Components/SoundComponent.gd" id="4_t852a"]
[ext_resource type="Script" path="res://Components/SoundData.gd" id="5_eicgw"]
[ext_resource type="AudioStream" uid="uid://cxkfpcbq23k8j" path="res://Assets/Sounds/gunshot.wav" id="6_pmewx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0k6o4"]
radius = 4.0

[sub_resource type="Curve" id="Curve_xmo26"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0uesb"]
size = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_n7mbx"]
script = ExtResource("5_eicgw")
name = "Gunshot"
sound = ExtResource("6_pmewx")

[node name="Bullet" type="CharacterBody2D"]
collision_layer = 8
motion_mode = 1
script = ExtResource("1_dqpg5")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = 10
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_gturb")

[node name="Area2D" type="Area2D" parent="." groups=["Bullet"]]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0k6o4")

[node name="SnakeComponent" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_lep1b")
player = NodePath("..")
segments = 3
spacing = 3.0
taper = SubResource("Curve_xmo26")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource("RectangleShape2D_0uesb")

[node name="SoundComponent" type="Node2D" parent="."]
script = ExtResource("4_t852a")
sounds = Array[ExtResource("5_eicgw")]([SubResource("Resource_n7mbx")])

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
